service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http-echo-service
  namespace: default
spec:
  selector:
    app: http-echo
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
