ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-echo-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: http-echo.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: http-echo-service
            port:
              number: 8080
